# health-dsl

./: .gitignore  README.md  RELEASING.md  jitpack.yml
.github/workflows/: ci.yml  release-maven.yml  release-npm.yml  release-rust.yml
kotlin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/com/slothlabs/health/: CheckResult.kt  HealthCheck.kt  HealthRegistry.kt  HealthReport.kt  Status.kt
kotlin/src/test/kotlin/com/slothlabs/health/: HealthDslTest.kt
rust/: Cargo.toml  README.md
rust/src/: check.rs  lib.rs  report.rs  result.rs  status.rs
rust/tests/: health_dsl.rs
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/src/: check.ts  index.ts  registry.ts  report.ts  result.ts  status.ts
ts/test/: health-dsl.test.ts
