[package]
name = "health-dsl"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A tiny async DSL for declaring service readiness/liveness checks — run concurrently, aggregated correctly, serialized anywhere."
license = "MIT"
repository = "https://github.com/SlothLabs/health-dsl"
homepage = "https://github.com/SlothLabs/health-dsl"
documentation = "https://docs.rs/health-dsl"
readme = "README.md"
keywords = ["health", "readiness", "liveness", "async", "devops"]
categories = ["asynchronous", "web-programming", "development-tools"]
exclude = [".github/*"]

[lib]
name = "health_dsl"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "time", "macros"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
